--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,15 @@ nav ul a.active:before{
     @apply w-2
 }
 
+.bounce {
+    animation: bounce 2s ease infinite;
+}
+@keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+	40% {transform: translateY(-30px);}
+	60% {transform: translateY(-15px);}
+}
+
 .progress-bar {
     transform-origin: 0%;
     @apply fixed z-50 top-0 left-0 right-0 h-2 bg-developes-success
@@ -38,7 +47,6 @@ nav ul a.active:before{
     display: flex;
     flex-wrap: nowrap;
 }
-
 .parallax .scroller {
     font-weight: 600;
     text-transform: uppercase;
@@ -48,7 +56,6 @@ nav ul a.active:before{
     display: flex;
     flex-wrap: nowrap;
 }
-
 .parallax span {
     display: block;
     margin-right: 30px;
